Fixed icon alignment.

--- a/dashframework-main/jbi100_app/assets/style.css
+++ b/dashframework-main/jbi100_app/assets/style.css
@@ -314,3 +314,9 @@ h5 {
     height: 100%;
 }
 
+.drop-icon {
+    height: 100%;
+    width: 100%;
+    margin-top: -8px;
+}
+
